--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,1 +1,31 @@
-<p>faq works!</p>
+<body class="bg-gray-100 flex justify-center min-h-screen">
+    <div class="max-w-xl w-full p-4 bg-black shadow-lg rounded-xl">
+        <h2 class="text-2xl font-bold mb-4">Česta pitanja</h2>
+        
+        <div *ngFor="let item of faqItems; let i = index" class="mb-2">
+            <button
+                class="w-full flex justify-between items-center text-left font-semibold text-lg py-2 px-4 bg-black text-white rounded-2xl shadow-md focus:outline-none"
+                (click)="toggleItem(i)"
+            >
+                <span>{{ item.question }}</span>
+                <svg
+                    class="w-5 h-5 flex-shrink-0 transform transition-transform"
+                    [ngClass]="{ 'rotate-180': item.isOpen }"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                </svg>
+            </button>
+            <div
+                class="overflow-hidden bg-gray-950 text-white transition-all duration-200 rounded-2xl mt-1"
+                [ngStyle]="{ 'max-height': item.isOpen ? '5000px' : '0' }"
+            >
+                <div class="p-4">
+                    {{ item.answer }}
+                </div>
+            </div>
+        </div>
+    </div>
