Add media component with image slider and Instagram profiles; update favicon and titles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="row py-5">
         <div class="col-sm-12">
-            <h1 class="text-center !text-red-500 !font-bold">Elektrotehnički fakultet u blokadi</h1>
+            <h1 class="text-center !text-red-500 !font-bold">Tehnički fakulteti u blokadi</h1>
         </div>
     </div>
 </div>
