--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -7,7 +7,7 @@
         </div>
   
         <!-- Instagram Profiles -->
-        <div class="space-mono-regular bg-black text-white p-4">
+        <div class="space-mono-regular bg-transparent text-white p-4">
           <div class="d-flex flex-wrap justify-content-center gap-4">
             <div *ngFor="let profile of instagramProfiles" class="embed-container">
               <blockquote
