--- a/src/app/media/media.component.css
+++ b/src/app/media/media.component.css
@@ -1,52 +1,62 @@
+/* Container for the media component */
+.media-container {
+  position: relative;
+}
+
+/* Position the LoaderComponent overlay absolutely over media content */
+app-loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+
+/* Existing code for the embed container */
 .embed-container {
-    width: 350px;
-    height: 120px;
-    overflow: hidden;
-    border-radius: 10px;
-    position: relative;
+  width: 350px;
+  height: 120px;
+  overflow: hidden;
+  border-radius: 10px;
+  position: relative;
+  transition: 0.5s;
+}
 
-    transition : 0.5s;
-  }
+.embed-container:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  /* Has to be exact width and height as the fetched embed iframe */
+  height: 444px;
+  transition: 0.5s;
+}
 
-  .embed-container:hover{
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+/* Styles for image slider and flash animation */
+.image-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
-    /* Has to be exact width and height as the fetched embed iframe (as seen in inspect element).
-       Inline style cannot be overwritten and fit-content doesn't work either bcs it
-       has a bottom margin...
-       Could get height after loading and adjust height but that could be choppy.*/
-    height : 444px;
+.image-slider img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  transition: filter 0.5s ease-in-out;
+}
 
-    transition : 0.5s;
+.flash {
+  animation: flash 0.5s ease-in-out;
+}
 
+@keyframes flash {
+  0% {
+    filter: brightness(1);
   }
-
-  .image-slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+  50% {
+    filter: brightness(10);
   }
-  
-  .image-slider img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-    transition: filter 0.5s ease-in-out;
+  100% {
+    filter: brightness(1);
   }
-  
-  .flash {
-    animation: flash 0.5s ease-in-out;
-  }
-  
-  @keyframes flash {
-    0% {
-      filter: brightness(1);
-    }
-    50% {
-      filter: brightness(10);
-    }
-    100% {
-      filter: brightness(1);
-    }
-  }
+}
