Add donations page: create DonationsComponent, update routes, and enhance FAQ content.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
                     <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Zahtevi</a>
                 </li>
                 <li class="nav-item px-2">
+                    <a class="nav-link" routerLink="/donations" routerLinkActive="active">Donacije</a>
+                </li>
+                <li class="nav-item px-2">
                     <a class="nav-link" routerLink="/announcements" routerLinkActive="active">Najave</a>
                 </li>
                 <li class="nav-item px-2">
