--- a/src/app/donations/donations.component.css
+++ b/src/app/donations/donations.component.css
@@ -1,44 +1,27 @@
-.iframe-wrapper {
+.map-fixed-container {
+    position: fixed;
+    margin-top : 50px;
+    top: 50%;
+    left: 50%;
+    width: 60%;
+    height: 650px;
+    transform: translate(-50%, -50%);
+    border: 2px solid black; /* optional, to visualize container */
+  }
+  
+  #map {
     width: 100%;
-    height: 600px; /* The visible height of the embed */
-    overflow: hidden;
-}
+    height: 100%;
+    overflow : hidden;
+  }
 
-.embedded-frame {
 
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    transition: box-shadow 0.3s ease;
-    overflow: auto; /* Enable scrolling */
-    
-    /* Firefox scrollbar styling */
-    scrollbar-width: thin;
-    scrollbar-color: #c1c1c1 #f1f1f1;
-}
-
-.embedded-frame:hover {
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-}
-
-/* Custom scrollbar styling for WebKit browsers */
-.embedded-frame::-webkit-scrollbar {
-    width: 10px;
-}
-
-.embedded-frame::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    border-radius: 10px;
-}
-
-.embedded-frame::-webkit-scrollbar-thumb {
-    background: #c1c1c1;
-    border-radius: 10px;
-    border: 2px solid transparent;
-    background-clip: content-box;
-}
-
-.embedded-frame::-webkit-scrollbar-thumb:hover {
-    background: #a8a8a8;
-}
+  .leaflet-popup-content-wrapper {
+    transition: opacity 0.3s ease-in-out;
+    opacity: 0;
+  }
+  
+  .leaflet-popup-content-wrapper.fade-in {
+    opacity: 1;
+  }
+  
