--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -1,6 +1,3 @@
-<iframe 
-    class="embedded-frame"
-    src="https://blokadnedonacije.rs/" 
-    width="100%" 
-    height="700">
-</iframe>
+<div class="map-fixed-container">
+    <div id="map"></div>
+  </div>
