--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,32 @@
 <app-loading *ngIf="loading"></app-loading>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <ul class="nav nav-underline px-5 py-1">
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Zahtevi</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/donations" routerLinkActive="active">Donacije</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/announcements" routerLinkActive="active">Najave</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/incidents" routerLinkActive="active">Incidenti</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/media" routerLinkActive="active">Mediji</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/faq" routerLinkActive="active">FAQ</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a class="nav-link" routerLink="/contact" routerLinkActive="active">Kontakt</a>
-                </li>
-            </ul>
+<div>
+    <app-nav-bar></app-nav-bar>
+    <div>
+        <div>
+            <div *ngIf="showHero" class="h-screen">
+                <app-typewriter [showHero]="showHero"></app-typewriter>
+            </div>
+
+            <div *ngIf="!showHero">
+                <app-typewriter [showHero]="showHero"></app-typewriter>
+            </div>
         </div>
     </div>
-    <div class="row py-5">
-        <div class="col-sm-12">
-            <app-typewriter></app-typewriter>
-        </div>
-    </div>
-    <div class="container">
+    <button *ngIf="showButton && showHero" (click)="scrollToSection()"
+        [ngClass]="{'opacity-100': buttonVisible, 'opacity-0': !buttonVisible, 'transition-opacity': true, 'duration-500': true, 'ease-in-out': true}"
+        class="hero-button fixed bottom-10 left-40 flex p-0 items-center justify-center bg-red-600/90 text-black w-16 h-16 rounded-full border-1 border-red-400/30 hover:bg-red-700">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-8 h-8" style="margin-top: 3px;">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
+        </svg>
+    </button>
+    <div #contentSection class="container pb-20">
         <!-- Wrap the router-outlet with a div that has the animation trigger -->
         <div [@routeAnimations]="prepareRoute(outlet)">
             <router-outlet #outlet="outlet"></router-outlet>
         </div>
     </div>
+
+
+
 </div>
