Enhance hero section styling and update navigation layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div>
     <app-nav-bar></app-nav-bar>
     <div>
-        <div>
+        <div class="hero">
             <div *ngIf="showHero" class="h-screen">
                 <app-typewriter [showHero]="showHero"></app-typewriter>
             </div>
