--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <div class="max-w-screen-xl flex flex-wrap text-white items-center justify-between mx-auto p-2">
         <!-- Left side: Navigation links -->
         <div class="flex items-center">
-            <ul class="flex space-x-8 px-2 my-1 items-center flex-wrap">
+            <ul class="flex gap-8 px-2 my-1 items-center flex-wrap">
                 <li><a class="nav-link" routerLink="/" routerLinkActive="font-bold"
                         [routerLinkActiveOptions]="{ exact: true }">{{
                         "ZAHTEVI"
