--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-loading *ngIf="loading"></app-loading>
-<div>
+<div class="screen-stable">
     <app-nav-bar></app-nav-bar>
     <div>
         <div class="hero">
