--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="sticky top-0 z-10 bg-zinc-900/20 backdrop-filter backdrop-blur-lg border-b border-zinc-700/10 shadow-md">
-    <div class="max-w-screen-xl flex flex-wrap text-white items-center justify-between mx-auto p-2">
+    <div class="screen-stable max-w-screen-xl flex flex-wrap text-white items-center justify-between mx-auto p-2">
         <!-- Left side: Navigation links -->
         <div class="flex items-center">
             <ul class="flex gap-8 px-2 my-1 items-center flex-wrap">
