Cleaned up unnecessary imports

--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -3,12 +3,12 @@
         <!-- Left side: Navigation links -->
         <div class="flex items-center">
             <ul class="flex gap-8 px-2 my-1 items-center flex-wrap">
-                <li><a class="nav-link" routerLink="/" routerLinkActive="font-bold"
+                <li><a class="nav-link" routerLink="/" routerLinkActive="text-red-500"
                         [routerLinkActiveOptions]="{ exact: true }">{{
                         "ZAHTEVI"
                         | translate }}</a></li>
                 <li><a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
-                        routerLink="/donations" routerLinkActive="font-bold">{{ "DONACIJE" | translate }}</a></li>
+                        routerLink="/donations" routerLinkActive="active">{{ "DONACIJE" | translate }}</a></li>
                 <li><a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
                         routerLink="/announcements" routerLinkActive="font-bold">{{ "NAJAVE" | translate }}</a></li>
                 <li><a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
