--- a/src/app/features/donations/donations.component.html
+++ b/src/app/features/donations/donations.component.html
@@ -1,3 +1,11 @@
-<div class="map-fixed-container">
-    <div id="map"></div>
-  </div>
+<div class="fixed left-1/2 top-1/2 w-full min-h-[400px] max-w-[99%] md:max-w-[80%] lg:max-w-[1100px] transform -translate-x-1/2 md:-translate-y-[45%] -translate-y-[25%] mt-8 md:mt-12 lg:mt-16 border-2 border-black rounded-lg overflow-hidden h-[50vh] md:h-[70vh]">
+  <div id="map" class="w-full h-full bg-gray-100 focus:outline-none"></div>
+</div>
+
+<a
+    class="custom-button"
+    href="http://blokadnedonacije.rs"
+    target="_blank"
+  >
+     Donacije
+  </a>
