--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ body::before {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     background-image: url('../public/bg-still1.jpg');
     background-size: cover;
     /* Ensures the image covers the entire viewport */
@@ -120,6 +120,11 @@ body {
     height: 3rem;
   }
 
+.menu-button {
+    border-radius: 10px !important; /* Use !important to override conflicting styles */
+    width: 3rem;
+    height: 3rem;
+  }
 
 .ibm-plex-mono-thin {
     font-family: "IBM Plex Mono", serif;
