--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ body::before {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('../public/bg-still1.jpg');
     background-size: cover;
     /* Ensures the image covers the entire viewport */
@@ -82,13 +82,11 @@ body::before {
 /* ------- Prevents the everything moving bcs of the scrollbar ------- */
 html {
     scrollbar-gutter: stable both-sides;
-    overflow-x: hidden;
 }
 
 .screen-stable {
     position: relative;
     left: calc((100vw - 100%) / 2);
-    
 }
 /* -------------------------------------------------------------------- */
 
