--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
         class="screen-stable relative max-w-screen-xl flex flex-wrap text-white items-center justify-between mx-auto p-2">
         <!-- Left side: Navigation links -->
         <div class="hidden md:flex items-center justify between md:w-auto order-1">
-            <ul class="flex flex-col md:flex-row md:gap-8 gap-3 px-2 md:my-1 my-3 items-center flex-wrap">
+            <ul class="flex flex-col md:flex-row md:gap-8 gap-x-3 px-2 md:my-1 my-3 items-center flex-wrap">
                 <li><a class="nav-link" routerLink="/" routerLinkActive="text-red-500"
                         [routerLinkActiveOptions]="{ exact: true }">{{
                         "ZAHTEVI"
