Refactor donations component: update button positioning and add ETF icon for markers

--- a/src/app/features/donations/donations.component.html
+++ b/src/app/features/donations/donations.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <a
-    class="custom-button top-1/2 md:-translate-y-[0%] -translate-y-[-40%]"
+    class="custom-button top-1/2 md:-translate-y-[55%] -translate-y-[-50%] md:-translate-x-[0%] -translate-x-[25%]"
     href="http://blokadnedonacije.rs"
     target="_blank"
   >
